--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ We Are: DragonTFJ
 [ Hackead ] 
 </p>
 <p>
-<font size="4" color="gray" face="Courier New"> Thanks To :<font size="4" color="Green" face="Courier New"> Iced Earth Crypto / Skull Hacker / DragonSec
+<font size="4" color="gray" face="Courier New"> Thanks To :<font size="4" color="Green" face="Courier New"> Iced Earth / Crypto / Skull Hacker / DragonSec
 <br><font size="4" color="gray" face="
 Courier New"> Facebook: www.fb.com/HackeadBrasilChora and Youtube.com/DragonTFJ
 
